{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "945886d6-e2cd-4b46-9e96-8915cd8853e9",
            "actions": [
                {
                    "name": "MovementAxis",
                    "type": "Value",
                    "id": "5af368bd-e50d-4b85-80a0-c6396c995ee0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "d17073bd-7f2d-48f1-9c93-cc664a2b4af1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1a44b892-4f41-4abb-a874-e87033029163",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Movement",
                    "action": "MovementAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e5e4ba82-74ed-49d4-b587-c541c3c4ace8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Movement",
                    "action": "MovementAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "cce22aed-2d1b-419d-9d8f-0c93b3ba0143",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Movement",
                    "action": "MovementAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2135e99e-2b01-4d60-a757-5f57feec90ba",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Movement",
                    "action": "MovementAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "a915bcb4-bde5-4958-a005-707703bcd6b5",
            "actions": [
                {
                    "name": "Mouse",
                    "type": "Value",
                    "id": "52e61c3d-6e5b-4c41-9652-f1d0b6c69fbf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "e7b2b213-e5cc-4e6d-a5ad-adfe8cd49892",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "3143bceb-ee20-449c-89cd-bd5dcbe96580",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "39b3612f-0db9-4815-9a1f-8fa21a068e16",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7bde96fd-a77e-4a44-bd47-1b1a81f969de",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "634c4175-da09-4174-ad94-e52467cd1ce4",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Skill",
            "id": "5f3c63d9-d441-42ad-8b48-d01976a1a8c2",
            "actions": [
                {
                    "name": "Sword",
                    "type": "Button",
                    "id": "61f83aa9-67b2-4cfb-af76-bbed51ee38f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "c3a80107-0e8d-438d-a63d-03da8769db2d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Telekinesis",
                    "type": "Button",
                    "id": "37209d8b-6894-4673-9283-1d0005723914",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "38ad2acc-79ea-431c-adab-0ae3cbd4699e",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sword",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac12e982-5cfa-40dc-9b62-45ef09dd2bc4",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23093bf5-9634-4a8d-b2a9-9487256688f8",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Telekinesis",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Create",
            "id": "0053e8bf-0f36-4623-8787-951a49846700",
            "actions": [
                {
                    "name": "Knife",
                    "type": "Button",
                    "id": "f7eb222c-2727-4adf-921e-ced896ba4f35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6843c5f4-06f0-4ae7-b6a4-4f5b6f507f8d",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Knife",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interact",
            "id": "44f1b48f-8d5f-431f-9316-1ca2de584420",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "fe10025d-55f2-427d-bcd2-04bc7f16776e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8bf0ffde-930c-43ff-a327-f937e685db8f",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Movement",
            "bindingGroup": "Movement",
            "devices": []
        }
    ]
}